crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__propagate_inline_comments_propagate_inline_comments.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> propagate_inline_comments.py:1:1
  |
1 | / from mypackage.subpackage import (  # long comment that seems to be a problem
2 | |     a_long_variable_name_that_causes_problems,
3 | |     items,
4 | | )
  | |_^
help: Organize imports
  |
1 + from mypackage.subpackage import (  # long comment that seems to be a problem
2 +     a_long_variable_name_that_causes_problems,
3 + )
4 + from mypackage.subpackage import items  # long comment that seems to be a problem
  |
