crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__reorder_within_section.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> reorder_within_section.py:1:1
  |
1 | / import sys
2 | | import os
  | |_________^
help: Organize imports
  |
1 + import os
2 + import sys
  |
