crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__required_import_docstring_with_semicolon.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I002 [*] Missing required import: `from __future__ import annotations`
--> docstring_with_semicolon.py:1:1
help: Insert required import: `from __future__ import annotations`
  |
1 | """Hello, world!"""; from __future__ import annotations; x = 1
  |                      +++++++++++++++++++++++++++++++++++
