crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__required_import_equivalent_imports_equivalent_imports.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I002 [*] Missing required import: `import concurrent.futures as futures`
--> equivalent_imports.py:1:1
help: Insert required import: `import concurrent.futures as futures`
1 + import concurrent.futures as futures
2 | from concurrent import futures
3 | 
4 | 1
