crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__required_import_multiline_docstring.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I002 [*] Missing required import: `from __future__ import annotations`
--> multiline_docstring.py:1:1
help: Insert required import: `from __future__ import annotations`
  |
1 | """a
2 | b"""
3 | # b
4 + from __future__ import annotations
5 | import os
  |
